servarr/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  selector:
    app: jellyfin
  type: ClusterIP 
  ports:
    - name: http
      protocol: TCP
      port: 8096         
      targetPort: 8096  
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-local-discovery
  labels:
    app: jellyfin
  annotations:
    metallb.io/loadBalancerIPs: 192.168.18.51
spec:
  selector:
    app: jellyfin
  type: LoadBalancer
  ports:
    - name: local-discovery
      port: 7359
      targetPort: 7359
    - name: dlna
      port: 1900
      targetPort: 1900
